Use Scheduler and parallel tasks to generate cars